--- a/Sunrise_Housing_Andrea.ipynb
+++ b/Sunrise_Housing_Andrea.ipynb
@@ -336,7 +336,8 @@
    "outputs": [],
    "source": [
     "#columns contain irrelevant information based on repetition, uniqueness, data dictionary description\n",
-    "col_drop = ['Id','Condition1','Condition2','BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2', 'BsmtFinSF2','BsmtUnfSF','MiscVal']"
+    "col_drop = ['Id','Condition1','Condition2','BsmtFinType1', 'BsmtFinSF1', 'BsmtFinType2', 'BsmtFinSF2','BsmtUnfSF','MiscVal',\n",
+    "            'GarageYrBlt','MoSold']"
    ]
   },
   {
@@ -436,98 +437,115 @@
    "id": "35bad5e8",
    "metadata": {},
    "source": [
-    "**4. Determine columns with high number of zeros and to add them to drop list**"
+    "**4. Determine columns with high number of zeros or categorical features with values highly favouring one value and add them to drop list**<br>\n",
+    "    Since number of rows are less, none will be removed and the missing values will be imputed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "507a126d",
+   "id": "48da65dc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "438.0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 50% of number of rows\n",
-    ".3*(inp0.shape[0])"
+    "#find all columns with high number of zeroes(30% of zeros ok in each column) and drop them\n",
+    "inp0_0col = [i for i in inp0.columns if (inp0[i] == 0).sum()>(0.3*(inp0.shape[0]))]\n",
+    "col_drop=[]\n",
+    "col_drop.extend(inp0_0col)\n",
+    "\n",
+    "#find categorical features favouring highly only 1 value; highest count is more than 85% of the total rows; no variance\n",
+    "col_drop.extend(\n",
+    "    [i for i in inp0.select_dtypes(include='object').columns if inp0[i].value_counts().max() > (0.85*(inp0.shape[0]))])\n",
+    "\n",
+    "inp0.drop(col_drop, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07b2920c",
+   "metadata": {},
+   "source": [
+    "### II - Data cleaning & manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b79641f",
+   "metadata": {},
+   "source": [
+    "**1. Impute missing values for columns**<br>\n",
+    "Electrical,MasVnrArea,MasVnrType,BsmtFinType1,BsmtCond,BsmtQual,BsmtFinType2,BsmtExposure,GarageCond,GarageQual,GarageFinish,\n",
+    "GarageYrBlt,GarageType,otFrontage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "48da65dc",
+   "id": "9f0faa88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   MSSubClass     1460 non-null   int64  \n",
+      " 1   MSZoning       1460 non-null   object \n",
+      " 2   LotFrontage    1201 non-null   float64\n",
+      " 3   LotArea        1460 non-null   int64  \n",
+      " 4   LotShape       1460 non-null   object \n",
+      " 5   LotConfig      1460 non-null   object \n",
+      " 6   Neighborhood   1460 non-null   object \n",
+      " 7   BldgType       1460 non-null   object \n",
+      " 8   HouseStyle     1460 non-null   object \n",
+      " 9   OverallQual    1460 non-null   int64  \n",
+      " 10  OverallCond    1460 non-null   int64  \n",
+      " 11  YearBuilt      1460 non-null   int64  \n",
+      " 12  YearRemodAdd   1460 non-null   int64  \n",
+      " 13  RoofStyle      1460 non-null   object \n",
+      " 14  Exterior1st    1460 non-null   object \n",
+      " 15  Exterior2nd    1460 non-null   object \n",
+      " 16  MasVnrType     1452 non-null   object \n",
+      " 17  ExterQual      1460 non-null   object \n",
+      " 18  Foundation     1460 non-null   object \n",
+      " 19  BsmtQual       1423 non-null   object \n",
+      " 20  BsmtExposure   1422 non-null   object \n",
+      " 21  TotalBsmtSF    1460 non-null   int64  \n",
+      " 22  HeatingQC      1460 non-null   object \n",
+      " 23  1stFlrSF       1460 non-null   int64  \n",
+      " 24  GrLivArea      1460 non-null   int64  \n",
+      " 25  FullBath       1460 non-null   int64  \n",
+      " 26  BedroomAbvGr   1460 non-null   int64  \n",
+      " 27  KitchenAbvGr   1460 non-null   int64  \n",
+      " 28  KitchenQual    1460 non-null   object \n",
+      " 29  TotRmsAbvGrd   1460 non-null   int64  \n",
+      " 30  GarageType     1379 non-null   object \n",
+      " 31  GarageFinish   1379 non-null   object \n",
+      " 32  GarageCars     1460 non-null   int64  \n",
+      " 33  GarageArea     1460 non-null   int64  \n",
+      " 34  YrSold         1460 non-null   int64  \n",
+      " 35  SaleCondition  1460 non-null   object \n",
+      " 36  SalePrice      1460 non-null   int64  \n",
+      "dtypes: float64(1), int64(17), object(19)\n",
+      "memory usage: 422.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp0.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de2aec41",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#find all columns with high number of zeroes and drop them\n",
-    "inp0_0col = [i for i in inp0.columns if (inp0[i] == 0).sum()>438]\n",
-    "col_drop=[]\n",
-    "col_drop.extend(inp0_0col)\n",
-    "inp0.drop(col_drop, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f6057432",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street', 'LotShape', 'LandContour', 'Utilities', 'LotConfig', 'LandSlope', 'Neighborhood', 'BldgType', 'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd', 'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'TotalBsmtSF', 'Heating', 'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', 'GrLivArea', 'FullBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual', 'TotRmsAbvGrd', 'Functional', 'GarageType', 'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual', 'GarageCond', 'PavedDrive', 'MoSold', 'YrSold', 'SaleType', 'SaleCondition', 'SalePrice']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list(inp0.columns))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7443367d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 37, 0, 0, 0, 0, 0, 0, 9, 6, 1, 0, 0, 0, 0, 0, 0, 81, 81, 0, 0, 0, 0, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print([ (inp0[i] == 0).sum() for i in inp0.columns ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "16da57e1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(list(inp0.columns)))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
