Data cleaning and manipulation II

--- a/Sunrise_Housing_Andrea.ipynb
+++ b/Sunrise_Housing_Andrea.ipynb
@@ -36,6 +36,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from dateutil import relativedelta\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -463,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "12a0d1bc",
+   "id": "420e3280",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d9c1f103",
+   "id": "bbfd1e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7fa2fa0e",
+   "id": "be8cc01d",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58894fbe",
+   "id": "bc7ed071",
    "metadata": {},
    "source": [
     "**1.2 Continuous features**"
@@ -587,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dc4f1fee",
+   "id": "e8c5e306",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "00b481ad",
+   "id": "79f7db6b",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed522f7",
+   "id": "2362c72b",
    "metadata": {},
    "source": [
     "**Observation**<br>\n",
@@ -637,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33597909",
+   "id": "7d0aa586",
    "metadata": {},
    "source": [
     "**2. Reduce the number of categories within a categorical feature**<br>\n",
@@ -647,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7df8ad83",
+   "id": "e4d3e662",
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bb62ad33",
+   "id": "cb10ec61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fc59f9b1",
+   "id": "6801a4fd",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372adee3",
+   "id": "18bb1262",
    "metadata": {},
    "source": [
     "**3 Create derived metrics and drop the columns from which new metric is derived**"
@@ -964,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa017f74",
+   "id": "8cf5a539",
    "metadata": {},
    "source": [
     "**3.1 MoSold, YrSold : join the 2 columns to derive a new metric with month and year**"
@@ -973,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "940ba3ee",
+   "id": "5b56d8a9",
    "metadata": {
     "scrolled": true
    },
@@ -987,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6ecaba91",
+   "id": "50f2ce2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,23 +1001,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2fa04e",
+   "id": "553f5838",
    "metadata": {},
    "source": [
-    "**3.2 Calculate age of property**"
+    "**3.2 Calculate age of property using YearBuilt, YearRemodAdd & mySold**<br>\n",
+    "The new metrics will have fractional years since the month when the property was sold is known."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f71d4317",
+   "execution_count": 20,
+   "id": "6aed38d3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#difference between year when built and year when sold in fractional years\n",
+    "inp1['AgeBuiltYr'] = round((inp1['mySold'].dt.to_period('M').view(dtype='int64') \n",
+    "                            - inp1['YearBuilt'].dt.to_period('M').view(dtype='int64'))/12,2)\n",
+    "\n",
+    "#difference between year remodelled and year sold in fractional years\n",
+    "inp1['AgeRemodYr'] = inp1.apply(lambda x : 0 if x.YearBuilt==x.YearRemodAdd\n",
+    "     else ( relativedelta.relativedelta(x.mySold,x.YearRemodAdd).years + \n",
+    "           round((relativedelta.relativedelta(x.mySold,x.YearRemodAdd).months/12),2) ), axis=1 )\n",
+    "\n",
+    "col_drop.extend(['YearBuilt','YearRemodAdd','mySold'])"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "e6a1c22d",
+   "id": "d7abfcd2",
    "metadata": {},
    "source": [
     "**4. Fix the data types of all features**"
@@ -1023,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0278a03d",
+   "id": "3ab63652",
    "metadata": {},
    "source": [
     "**4.1 LotFrontage : convert from float64 to int64**"
@@ -1031,8 +1045,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "e08db9f4",
+   "execution_count": 21,
+   "id": "ee44b6f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7b0ef9a",
+   "id": "aa271572",
    "metadata": {},
    "source": [
     "**4.2 SalePrice : convert from int64 to float64 since it is price**"
@@ -1049,8 +1063,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "02d6f869",
+   "execution_count": 22,
+   "id": "96cc8bee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b188b414",
+   "id": "180d1a00",
    "metadata": {},
    "source": [
     "**5. Neighborhood : category Names is misspelt in dataset according to the data dictionary provided**<br>\n",
@@ -1068,29 +1082,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "fdbc3c7a",
+   "execution_count": 23,
+   "id": "fed3d2d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Others     1085\n",
+       "Names       225\n",
+       "CollgCr     150\n",
+       "Name: Neighborhood, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "inp1['Neighborhood'] = inp1['Neighborhood'].apply(lambda x : x.replace('NAmes','Names'))"
+    "inp1['Neighborhood'] = inp1['Neighborhood'].apply(lambda x : x.replace('NAmes','Names'))\n",
+    "inp1['Neighborhood'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "28beb00b",
+   "execution_count": 24,
+   "id": "d8a390a4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (3967754633.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[23], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    inp1.drop[col_drop, axis=1, inplace=True]\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#drop columns\n",
     "inp1.drop(col_drop, axis=1, inplace=True)"
@@ -1098,10 +1118,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "88170816",
+   "execution_count": 25,
+   "id": "76390e4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 34 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   MSSubClass    1460 non-null   int64  \n",
+      " 1   MSZoning      1460 non-null   object \n",
+      " 2   LotFrontage   1460 non-null   int64  \n",
+      " 3   LotArea       1460 non-null   int64  \n",
+      " 4   LotShape      1460 non-null   object \n",
+      " 5   LotConfig     1460 non-null   object \n",
+      " 6   Neighborhood  1460 non-null   object \n",
+      " 7   HouseStyle    1460 non-null   object \n",
+      " 8   OverallQual   1460 non-null   int64  \n",
+      " 9   OverallCond   1460 non-null   int64  \n",
+      " 10  RoofStyle     1460 non-null   object \n",
+      " 11  Exterior1st   1460 non-null   object \n",
+      " 12  Exterior2nd   1460 non-null   object \n",
+      " 13  MasVnrType    1460 non-null   object \n",
+      " 14  ExterQual     1460 non-null   object \n",
+      " 15  Foundation    1460 non-null   object \n",
+      " 16  BsmtQual      1460 non-null   object \n",
+      " 17  BsmtExposure  1460 non-null   object \n",
+      " 18  TotalBsmtSF   1460 non-null   int64  \n",
+      " 19  HeatingQC     1460 non-null   object \n",
+      " 20  1stFlrSF      1460 non-null   int64  \n",
+      " 21  GrLivArea     1460 non-null   int64  \n",
+      " 22  FullBath      1460 non-null   int64  \n",
+      " 23  BedroomAbvGr  1460 non-null   int64  \n",
+      " 24  KitchenAbvGr  1460 non-null   int64  \n",
+      " 25  KitchenQual   1460 non-null   object \n",
+      " 26  TotRmsAbvGrd  1460 non-null   int64  \n",
+      " 27  GarageType    1460 non-null   object \n",
+      " 28  GarageFinish  1460 non-null   object \n",
+      " 29  GarageCars    1460 non-null   int64  \n",
+      " 30  GarageArea    1460 non-null   int64  \n",
+      " 31  SalePrice     1460 non-null   float64\n",
+      " 32  AgeBuiltYr    1460 non-null   float64\n",
+      " 33  AgeRemodYr    1460 non-null   float64\n",
+      "dtypes: float64(3), int64(14), object(17)\n",
+      "memory usage: 387.9+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "#features after data cleaning & manipulation\n",
     "inp1.info()"
@@ -1109,15 +1177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3260334d",
+   "execution_count": 26,
+   "id": "72fa826e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#year = age old property\n",
-    "# year renovate - year sold ; but if year built = year sold then its 0\n",
     "#sum = sum of areas\n",
-    "#outlier - LotFrontage"
+    "#outlier - LotFrontage; do describe for all non objects"
    ]
   }
  ],
